@@ -73,7 +73,6 @@
     "fix"
     "from"
     "full_prf"
-    "global"
     "guess"
     "have"
     "header"
@@ -97,7 +96,6 @@
     "lemmas"
     "let"
     "linear_undo"
-    "local"
     "local_setup"
     "locale"
     "method_setup"
@@ -369,7 +367,6 @@
     "extract"
     "extract_type"
     "finalconsts"
-    "global"
     "hide_class"
     "hide_const"
     "hide_fact"
@@ -378,7 +375,6 @@
     "instantiation"
     "judgment"
     "lemmas"
-    "local"
     "local_setup"
     "locale"
     "method_setup"
