@@ -102,7 +102,6 @@
     "full_prf"
     "fun"
     "function"
-    "global"
     "guess"
     "have"
     "header"
@@ -128,7 +127,6 @@
     "lemmas"
     "let"
     "linear_undo"
-    "local"
     "local_setup"
     "locale"
     "method_setup"
@@ -469,7 +467,6 @@
     "fixpat"
     "fixrec"
     "fun"
-    "global"
     "hide_class"
     "hide_const"
     "hide_fact"
@@ -479,7 +476,6 @@
     "instantiation"
     "judgment"
     "lemmas"
-    "local"
     "local_setup"
     "locale"
     "method_setup"
